# vegen

./: CMakeLists.txt  LICENSE  README.md  extra-clang-flags.sh  flags-aggressive.sh  flags-mcts.sh  flags.sh  fp_sema.py  fuzzer.py  lift_sema.py  manual_parser.py  pack.pt  parser.py  printers.c  sanitizers.cmake  sema-gen.py  semas.py  test-with-csmith.py  vegen-clang.in
gslp/: BlockBuilder.cpp  BlockBuilder.h  CMakeLists.txt  CandidatePackSet.h  Canonicalizer.cpp  Canonicalizer.h  CodeMotionUtil.cpp  CodeMotionUtil.h  ConsecutiveCheck.cpp  ConsecutiveCheck.h  ControlDependence.cpp  ControlDependence.h  ControlEquivalence.cpp  ControlEquivalence.h  ControlReifier.cpp  ControlReifier.h  DependenceAnalysis.cpp  DependenceAnalysis.h  Embedding.cpp  Embedding.h  EnumerateSeeds.cpp  EnumerateSeeds.h  ExpressionHasher.cpp  GSLP.cpp  GraphUtil.cpp  GraphUtil.h  Heuristic.cpp  Heuristic.h  IRModel.cpp  IRModel.h  IRVec.cpp  IRVec.h  InstSema.cpp  InstSema.h  InstSema.x86.cpp  InstWrappers.arm.c  IntrinsicBuilder.cpp  IntrinsicBuilder.h  LaneBinding.cpp  LaneBinding.h  (+63 more)
gslp/Proto/: CMakeLists.txt  serialize.proto
gslp/target-sema/: arm.cpp  x86.cpp
gslp/target-wrappers/: arm.c
sema/: abstract_swizzle.py  arm-intriniscs.json  arm_semas.py  canonicalize.py  codegen.py  compiler.py  description.py  fp_sema.py  fuzzer.py  gen-arm.py  gen-inst-sema.arm.sh  gen-inst-sema.sh  gen-x86.py  gen_inst_wrappers.arm.py  gen_inst_wrappers.py  gen_rules.arm.py  gen_rules.py  intrinsic_types.py  intrinsics.all.sema  ir.py  lift_sema.arm.py  lift_sema.py  manual_parser.py  parsetab.py  perf.json  playground.py  printers.h  sema-gen-arm.py  sema-gen.py  sema_ast.py  semas.py  sig.py  spec_configurer.py  spec_serializer.py  z3_utils.py
sema/arm/: arm_semas.py  arm_simd.py  insts.py
sema/x86/: bit_util.py  compiler.py  fuzzer.py  insts.py  intrinsic_types.py  lex.py  manual_parser.py  perf.json  printers.c  printers.h  pseudocode_parser.py  sema-gen.py
test/: CMakeLists.txt  TestSwizzle.cpp  lit.cfg  lit.site.cfg.in  main.cpp  unsafe-to-fuse1.c  unsafe-to-fuse3.c
test/BlockBuilder/: 1.test  2.test  3.test
test/code-motion/: hoist-if.ll  hoist-if2.ll  hoist-loop.ll  hoist-loop2.ll  hoist-loop3.ll  hoist1.ll  hoist2.ll  hoist3.ll  hoist4.ll  hoist5.ll  matmul.ll  nested.ll
test/codegen/: 1500.reduced.ll  1787.reduced.ll  block-builder.ll  bug.c  bug.ll  bug2.ll  bug3.ll  bug4.ll  bug5.ll  control-dep.ll  gscolor.ll  loop.ll  phi.ll
test/consecutive-check/: inter-loops.ll  straightline.ll
test/dependence/: dep-cycle.ll
test/fusion/: do-fuse-nested.ll  do-fuse-nested2.ll  do-fuse1.ll  do-fuse2.ll  do-fuse3.ll  do-fuse4.ll  do-fuse5.ll  do-fuse6.ll  fuse-multiple.ll  fuse-multiple2.ll  safe-to-fuse-nested.c  safe-to-fuse1.c  safe-to-fuse2.c  safe-to-fuse3.c  safe-to-fuse4.ll  test-tool.ll  tiling.ll  unsafe-to-fuse2.c  unsafe-to-fuse4.c  unsafe-to-fuse5.c  unsafe-to-fuse6.c  unsafe-to-fuse6.ll
test/ispc/: c-cif-nested-continue.c  c-for-loop-nested-continues.c  c-for-unif-test-vary-break.c  c-test-108.c  c-test-133.c  c-test-134.c  c-test-62.c  c-test-64.c  c-test-65.c  c-test-66.c  c-test-67.c  c-test-68.c  c-test-69.c  c-test-70.c  c-test-71.c  c-test-76.c  c-test-77.c  cfor-c-cif-nested-continue.c  cfor-c-for-loop-nested-continues.c  cif-nested-continue.c  cwhile-test-59.c  cwhile-test-60.c  do-1.c  for-loop-nested-continues.c
test/misc/: consecutive-check.ll
test/rename-allocas/: no-rename.ll  rename.ll
test/vectorize/: blend.ll  blender-sss.ll  blender-sss2.ll  broken.ll  bug.ll  conditional-store.ll  dot-product.ll  even-odd.ll  extract-costs.ll  find-2d.ll  find.ll  fneg.ll  fp2si.ll  gather-struct.ll  gather-struct2.ll  gather.ll  gather2.ll  gscoord.ll  gxstroke.ll  ifs.ll  ifs2.ll  ifs3.ll  ifs4.ll  int-matmul.ll  kake2hiku.ll  mincov.ll  partially-convergent.ll  phi.ll  phi1.ll  phi2.ll  reduction-breaks-domtree.ll  reduction.ll  s112.ll  s118.ll  s275.c  s482.c  scalar-phi.ll  select.ll  sin.ll  sum-even-odd.ll  (+2 more)
test/vectorize/unroll/: bullet.ll
utils/: check-function.py  vegen-clang.in  vegen-opt.in
