include(FindProtobuf)
find_package(Protobuf REQUIRED)
include_directories(${PROTOBUF_INCLUDE_DIR})
protobuf_generate_cpp(PROTO_SRC PROTO_HEADER serialize.proto)
if(APPLE)
  add_library(Serialize STATIC ${PROTO_HEADER} ${PROTO_SRC})
else()
  add_library(Serialize SHARED ${PROTO_HEADER} ${PROTO_SRC})
endif(APPLE)
